[package]
name = "ldr2pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy_flycam = "0.15.0"
dirs = "6.0.0"
glam = "0.23.0"
lopdf = "0.34.0"
pretty_assertions = "1.4.1"
quick-xml = { version = "0.37.1", features = ["serialize"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_with = "3.11.0"
slab = "0.4.9"
tidier = "0.5.3"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
# weldr = "0.3.1"
# weldr = { git = "https://github.com/ScanMountGoat/weldr" }
weldr = { git = "https://github.com/djeedai/weldr" }
zip = "2.2.1"
# ldr_tools = { path = "../../py/ldr_tools_blender/ldr_tools" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
