[workspace]
resolver = "2"
members = [
  "render_2d",
  "render_3d",
  "xml_fmt",
  "ins_xml",
  "common",
  "bevy_lines",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.bevy]
inherits = "dev"
opt-level = 1

[profile.bevy.package."*"]
opt-level = 3

[workspace.dependencies]
glam = "0.23.0"
zip = "2.2.1"
tidier = "0.5.3"

# weldr = "0.3.1"
# weldr = { git = "https://github.com/ScanMountGoat/weldr" }
weldr.git = "https://github.com/djeedai/weldr" 
