[package]
name = "ldr2pdf_render_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
ldr2pdf_common = { path = "../common" }
glam = { workspace = true }
weldr = { workspace = true }

dirs = "6.0.0"

bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy_edge_detection = "0.15.4"
bevy_flycam = "0.15.0"
bevy_lines.path = "../bevy_lines"
